Combine the modules to work together and add styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,175 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+	font-family: "Pixelify Sans", "Sora", sans-serif, Inter, system-ui, Avenir,
+		Helvetica, Arial;
+	line-height: 1.5;
+	font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
+	background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+	font-weight: 500;
+	color: #646cff;
+	text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+	color: #535bf2;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+	margin: 0;
+	display: flex;
+	place-items: center;
+	background-image: url(./assets/pokemon.png);
+	background-size: cover;
+	background-position: center;
+	backdrop-filter: blur(10px);
+
+	#root {
+		display: flex;
+		justify-content: center;
+		flex-flow: column;
+		align-items: center;
+		gap: 1rem;
+		align-content: center;
+		backdrop-filter: blur(20px);
+		min-height: 100dvh;
+		width: 100dvw;
+		padding: 0 10vw;
+	}
+}
+h1,
+h2,
+p {
+	margin: 0;
+}
+h1 {
+	font-size: 4.2em;
+	line-height: 1.1;
+	text-shadow: 5px 5px black, 3px 3px rgb(252, 186, 87);
+}
+h2,
+.Score,
+h1 {
+	color: #fff;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.Score {
+	background-color: hsla(0, 0%, 0%, 0.3);
+	padding: 0.5rem 1rem;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+	border-radius: 8px;
+	border: 1px solid transparent;
+	padding: 0.6em 1.2em;
+	font-size: 1em;
+	font-weight: 500;
+	font-family: inherit;
+	background-color: #1a1a1a;
+	cursor: pointer;
+	transition: border-color 0.25s;
+	margin: 0.5rem;
+	box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.3);
+	overflow: hidden;
 }
 button:hover {
-  border-color: #646cff;
+	border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+	outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+	:root {
+		color: #213547;
+		background-color: #ffffff;
+	}
+	a:hover {
+		color: #747bff;
+	}
+	button {
+		background-color: #f9f9f9;
+	}
+}
+.card button {
+	outline-style: auto;
+	transition: transform 0.2s ease-in-out;
+}
+.card button:focus {
+	transform: scale(1.15);
+	transition: transform 0.2s ease-in-out;
+}
+.cardEffect {
+	button {
+		animation: reveal-card 2s linear;
+	}
+}
+.cardsContainer {
+	display: flex;
+	flex-wrap: wrap;
+
+	button {
+		position: relative;
+		height: 130px;
+		width: 100px;
+		background-size: contain;
+		background-repeat: no-repeat;
+		transition: transform 1s cubic-bezier(0.38, -1.66, 0.65, 2.2);
+		p {
+			position: absolute;
+			bottom: 1px;
+			margin: 0.3rem;
+			left: 0;
+			width: 100%;
+		}
+	}
+}
+
+dialog {
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	border-radius: 0.5rem;
+	gap: 0.5rem;
+	outline: auto;
+	border: none;
+	h1 {
+		font-size: 2.5rem;
+		color: #1a1a1a;
+		text-shadow: none;
+	}
+	h3 {
+		margin: 0;
+	}
+	button {
+		background-color: rgb(252, 186, 87);
+		box-shadow: none;
+	}
+}
+
+@keyframes reveal-card {
+	from {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+.wrongCard {
+	background-color: rgb(252, 87, 87);
+	transform: translateY(2rem);
+	transition: transform 0.5s linear;
 }
